[package]
name = "duckworth-lewis"
author = "Sam Rosenberg"
version = "0.1.0"
edition = "2021"
description = "A calculator for determining targets for the team batting second in weather affected cricket matches using the Duckworth Lewis Standard Edition methodology"
repository = "https://github.com/crangiopharengoma/duckworth-lewis"
license = "MIT OR Apache-2.0"

[[bin]]
name = "dlc"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
clap = { version = "4", optional = true, features = ["derive", "env"] }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
thiserror = "1"

[features]
cli = ["dep:clap", "ser"]
ser = ["dep:serde", "dep:serde_json"]
